--- a/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj
+++ b/Direct3D Win32 Game1/Direct3D Win32 Game1.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="AnimatedTexture.h" />
     <ClInclude Include="expected.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="LevelParser.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="serviceLocator.h" />
     <ClInclude Include="Wall.h" />
@@ -166,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="LevelParser.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
@@ -180,6 +182,7 @@
     <ResourceCompile Include="resource.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="barsuk.png" />
     <Image Include="cat.DDS" />
     <Image Include="cat.png" />
     <Image Include="directx.ico" />
@@ -187,13 +190,18 @@
     <Image Include="sidewall.png" />
     <Image Include="starfield.png" />
     <Image Include="sunset.jpg" />
+    <Image Include="turtles.png" />
     <Image Include="upwall.png" />
+    <Image Include="wooden-floor.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="level.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
